--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ a {
 .header1 {
     background-image: url(hero-banner.jpg);
     background-repeat: no-repeat;
+    background-size: cover;
     height: 500px;
     width: 100%;
     margin-top: -2%;
